name:                mc
version:             0.1.0.0
synopsis:            Multicelular simulator
description:         Please see README.md
homepage:            https://github.com/davips/mc#readme
license-file:        LICENSE
author:              Davi Pereira-Santos
maintainer:          dpsabc@gmail.com
copyright:           2016 Davi Pereira-Santos
category:            Development
build-type:          Simple
cabal-version:       >=1.10

executable mc
--  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , gloss
                     , containers
                     , logict
                     , ad
                     , pqueue
                     , heap
                     , random
                     , mwc-random
--                     , linkedhashmap
