name:                mucel
version:             0.1.0.1
synopsis:            Multicelular simulator
description:         Please see README.md
homepage:            https://github.com/davips/mucel#readme
license-file:        LICENSE
author:              Davi Pereira-Santos
maintainer:          dpsabc@gmail.com
copyright:           2016 Davi Pereira-Santos
category:            Development
build-type:          Simple
cabal-version:       >=1.10

executable mucel
  ghc-options:         -O2
                       -threaded
                       -fexcess-precision
                       -optc-O3
                       -optc-ffast-math
                       -funfolding-use-threshold=16
  default-extensions:
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Bio, Geometry, View, Rnd, Config, Physics, World, Debug, Struct
  build-depends:       base 
-- >= 4.7 && < 5
                     , gloss
                     , containers
--                     , logict
--                     , ad
                     , pretty-show
                     , array
                     , vector
                     , random
   
